[gd_scene load_steps=22 format=3 uid="uid://cjp7tplveqaa1"]

[ext_resource type="Script" uid="uid://3ugwl7hub5eu" path="res://Scripts/room.gd" id="1_8guil"]
[ext_resource type="PackedScene" uid="uid://gl42iurx0r8d" path="res://Scenes/level design/terrain_rectangle.tscn" id="2_8x1a6"]
[ext_resource type="PackedScene" uid="uid://dmollusy6dodq" path="res://Scenes/level design/walls_rectangle.tscn" id="3_6oyy6"]
[ext_resource type="PackedScene" uid="uid://1uobr5mjx3d0" path="res://Scenes/level design/door_north.tscn" id="4_tx8w8"]
[ext_resource type="PackedScene" uid="uid://b50fcrcf248pp" path="res://Scenes/level design/door_south.tscn" id="5_5xinr"]
[ext_resource type="PackedScene" uid="uid://daiq3qmbcmlyj" path="res://Scenes/level design/door_east.tscn" id="6_raivp"]
[ext_resource type="PackedScene" uid="uid://bqq3a24anqoae" path="res://Scenes/level design/door_west.tscn" id="7_uyw5k"]
[ext_resource type="PackedScene" uid="uid://buxq4savjtg61" path="res://Scenes/map_generator.tscn" id="8_5xwlj"]
[ext_resource type="PackedScene" uid="uid://bjkyp44b6ihsi" path="res://Scenes/player.tscn" id="9_xhwte"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_of7bs"]
size = Vector2(22.53305, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bct23"]
size = Vector2(33.36892, 53.39608)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l5krk"]
size = Vector2(20.371658, 18.13205)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r4x7e"]
size = Vector2(22.710289, 28.930695)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v310t"]
size = Vector2(20, 13.500596)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s4hcj"]
size = Vector2(16.937202, 17.500801)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t84hy"]
size = Vector2(30.888489, 25.441826)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jliad"]
size = Vector2(28.225464, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pccy6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o4ei3"]
size = Vector2(28.391068, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qsm1c"]
size = Vector2(22.65213, 27.866898)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqi7j"]
size = Vector2(116.47487, 313)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_8guil")

[node name="rectangle" type="Node2D" parent="."]

[node name="terrain1" parent="rectangle" instance=ExtResource("2_8x1a6")]
position = Vector2(960, 540)

[node name="WallsRectangle" parent="rectangle" instance=ExtResource("3_6oyy6")]
position = Vector2(960, 540)

[node name="doors_rectangle" type="Node2D" parent="rectangle"]

[node name="door north" parent="rectangle/doors_rectangle" instance=ExtResource("4_tx8w8")]
position = Vector2(944, 96)

[node name="door south" parent="rectangle/doors_rectangle" instance=ExtResource("5_5xinr")]
visible = false
position = Vector2(938, 1004)

[node name="door east" parent="rectangle/doors_rectangle" instance=ExtResource("6_raivp")]
position = Vector2(1826, 531)

[node name="door west" parent="rectangle/doors_rectangle" instance=ExtResource("7_uyw5k")]
visible = false
position = Vector2(90, 525)

[node name="collision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision"]
position = Vector2(461.5, 138)
scale = Vector2(32.17496, 4.285013)
shape = SubResource("RectangleShape2D_of7bs")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="collision"]
position = Vector2(139, 370.5)
scale = Vector2(3.1166725, 11.367875)
shape = SubResource("RectangleShape2D_bct23")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="collision"]
position = Vector2(137, 851)
scale = Vector2(5.3014827, 21.398571)
shape = SubResource("RectangleShape2D_l5krk")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="collision"]
position = Vector2(574, 989.68097)
scale = Vector2(45.70616, 3.0638053)
shape = SubResource("RectangleShape2D_r4x7e")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="collision"]
position = Vector2(1473, 141.42322)
scale = Vector2(42.59811, 6.2846456)
shape = SubResource("RectangleShape2D_v310t")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="collision"]
position = Vector2(1456.5409, 989.5)
scale = Vector2(46.116337, -5.085484)
shape = SubResource("RectangleShape2D_s4hcj")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="collision"]
position = Vector2(1798.9412, 282.12067)
scale = Vector2(3.1117566, 15.02413)
shape = SubResource("RectangleShape2D_t84hy")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="collision"]
position = Vector2(1796.5396, 852)
scale = Vector2(3.2920988, 14.83525)
shape = SubResource("RectangleShape2D_jliad")

[node name="Loading_Zones" type="Node2D" parent="."]

[node name="North" type="Area2D" parent="Loading_Zones"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Loading_Zones/North"]
position = Vector2(926, 49.000008)
scale = Vector2(19.088322, 5.0962195)
shape = SubResource("RectangleShape2D_pccy6")

[node name="South" type="Area2D" parent="Loading_Zones"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Loading_Zones/South"]
position = Vector2(927.2415, 1045)
scale = Vector2(12.4516945, 3.6992338)
shape = SubResource("RectangleShape2D_o4ei3")

[node name="East" type="Area2D" parent="Loading_Zones"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Loading_Zones/East"]
position = Vector2(1867.1838, 561.9112)
scale = Vector2(4.6632576, 11.417762)
shape = SubResource("RectangleShape2D_qsm1c")

[node name="West" type="Area2D" parent="Loading_Zones"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Loading_Zones/West"]
position = Vector2(74, 556)
shape = SubResource("RectangleShape2D_hqi7j")

[node name="map generator" parent="." instance=ExtResource("8_5xwlj")]

[node name="player" parent="." instance=ExtResource("9_xhwte")]
position = Vector2(990, 545)

[connection signal="area_entered" from="Loading_Zones/North" to="." method="_on_north_area_entered"]
[connection signal="area_entered" from="Loading_Zones/South" to="." method="_on_south_area_entered"]
[connection signal="area_entered" from="Loading_Zones/East" to="." method="_on_east_area_entered"]
[connection signal="area_entered" from="Loading_Zones/West" to="." method="_on_west_area_entered"]
